2019-10-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c:
	  Use pdk15 comp.

2019-10-15 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Fix code generation for calls via function pointers.

2019-10-14 Philipp Klaus Krause <pkk AT spth.de>

	* Merge pic14 branch.

2019-10-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCicode.h,
	  src/SDCCicode.c,
	  src/SDCCsalloc.hpp,
	  src/stm8/gen.c,
	  src/z80/gen.c,
	  src/pdk/gen.c:
	  Improve tail call optimization.

2019-10-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.h:
	  Fix error message, patch #307 by RvS.
	* src/SDCCsymt.c:
	  Indentation fix.

2019-10-07 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pic14/glue.c:
	  Improve compability with trunk, patches by Gonzalo Pérez de Olaguer Córdoba.

2019-10-06 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/aspdk15/pdk15pst.c:
	  Fix swapc bug #2935.

2019-10-02 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c:
	  Improve handling of stack operands in comparison.

2019-10-01 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c:
	  Fixes and improvements for stack operands.
	* .version:
	  Bump version for advances in -mpdk15 --stack-auto.
	* configure.ac,
	  configure,
	  sim/ucsim/configure.ac,
	  sim/ucsim/configure,
	  sdccconf_in.h,
	  sim/ucsim/ddconfig_in.h:
	  Remove check for strerror(), which is part of C89 and used unconditionally in SDCC anyway.

2019-09-30 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c:
	  Fixes and improvements for stack operands.
	* configure,
	  configure.ac,
	  device/lib/Makefile.in,
	  device/lib/clean.mk,
	  device/lib/pdk15-stack-auto,
	  src/pdk/main.c,
	  support/regression/Makefile.in,
	  support/regression/ports/pdk15-stack-auto:
	  Infrastructure for -mpdk15 --stack-auto regression testing.

2019-09-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c: