@@ -1,3 +1,8 @@
+2019-10-19 Philipp Klaus Krause <pkk AT spth.de>
+
+	* device/lib/pdk15-stack-auto/__setjmp.s:
+	  Fix bug #2934.
+
 2019-10-16 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/pdk/gen.c:
